[package]
name = "deno-semver-redirect"
description = "Redirect Deno dependencies from semantic versions to the newest fitting version on deno.land/x"
version = "1.0.0"
license = "AGPL-3.0-or-later"
authors = ["EdJoPaTo <deno-semver-redirect@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
percent-encoding = "2"
semver = "1"
serde_json = "1"
tide = "0.16"

# ureq is synchronous. Maybe use an async framework like reqwest. But reqwest uses tokio, tide uses async-std. does that matter?
ureq = "2"
#reqwest = "0.11"

[dependencies.async-std]
version = "1"
features = ["attributes"]

[dependencies.serde]
version = "1"
features = ["derive"]
