[package]
name = "deno-semver-redirect"
description = "Redirect Deno dependencies from semantic versions to the newest fitting version on deno.land/x"
version = "1.1.5"
license = "AGPL-3.0-or-later"
repository = "https://github.com/EdJoPaTo/deno-semver-redirect"
authors = ["EdJoPaTo <deno-semver-redirect@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
async-std = { version = "1", features = ["attributes"] }
percent-encoding = "2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tide = "0.16"

# ureq is synchronous. Maybe use an async framework like reqwest. But reqwest uses tokio, tide uses async-std. does that matter?
ureq = "2"
#reqwest = "0.11"
